changed template, fixed align to be written nicer

--- a/css/style_main.css
+++ b/css/style_main.css
@@ -59,13 +59,6 @@ div.div_button {
 	margin-left: 30px;
 }
 
-.subheader_div h3 {
-	float: left;
-	width: 80%;
-	height: 50px;
-}
-
-.subheader_div img {
-	position: relative;
-	float: right;
+img{
+	margin-left: 20px;
 }
